erDiagram

    users {
        INT id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password
        ENUM role
        TINYINT is_active
        TIMESTAMP created_at
    }

    refresh_tokens {
        INT id PK
        INT user_id FK
        VARCHAR token
        TIMESTAMP expires_at
        TINYINT revoked
        TIMESTAMP created_at
    }

    themes {
        INT id PK
        VARCHAR name
        CHAR color_light
        CHAR color_dark
        VARCHAR pieces_set
        TINYINT is_default
        TIMESTAMP created_at
    }

    profiles {
        INT id PK
        INT user_id FK
        MEDIUMTEXT avatar
        TEXT bio
        INT elo
        INT wins
        INT losses
        INT draws
        INT theme_id FK
        TIMESTAMP updated_at
    }

    elo_history {
        INT id PK
        INT user_id FK
        INT elo_before
        INT elo_after
        INT delta
        INT game_id FK
        TIMESTAMP recorded_at
    }

    games {
        INT id PK
        INT player_white_id FK
        INT player_black_id FK
        ENUM status
        ENUM result
        ENUM end_reason
        SMALLINT time_control
        TEXT pgn
        VARCHAR fen_final
        TIMESTAMP started_at
        TIMESTAMP ended_at
    }

    moves {
        INT id PK
        INT game_id FK
        SMALLINT move_number
        INT player_id FK
        VARCHAR move_san
        VARCHAR move_uci
        VARCHAR fen_after
        INT time_spent
        TIMESTAMP created_at
    }

    bot_games {
        INT id PK
        INT user_id FK
        ENUM user_color
        TINYINT bot_level
        ENUM status
        ENUM result
        ENUM end_reason
        SMALLINT time_control
        TEXT pgn
        TIMESTAMP started_at
        TIMESTAMP ended_at
    }

    bot_moves {
        INT id PK
        INT bot_game_id FK
        SMALLINT move_number
        TINYINT is_bot
        VARCHAR move_san
        VARCHAR move_uci
        VARCHAR fen_after
        INT time_spent
        TIMESTAMP created_at
    }

    game_analysis {
        INT id PK
        INT user_id FK
        INT game_id FK
        INT bot_game_id FK
        TINYINT score
        DECIMAL accuracy
        SMALLINT brilliants
        SMALLINT mistakes
        SMALLINT blunders
        JSON analysis_json
        TIMESTAMP created_at
    }

    puzzles {
        INT id PK
        VARCHAR title
        VARCHAR fen
        VARCHAR solution
        ENUM difficulty
        VARCHAR theme_tag
        INT rating
        INT created_by FK
        TIMESTAMP created_at
    }

    puzzle_attempts {
        INT id PK
        INT puzzle_id FK
        INT user_id FK
        TINYINT solved
        INT time_spent
        TIMESTAMP attempted_at
    }

    reports {
        INT id PK
        INT reporter_id FK
        INT reported_user_id FK
        INT game_id FK
        ENUM reason
        TEXT description
        ENUM status
        INT reviewed_by FK
        TIMESTAMP created_at
    }

    friendships {
        INT id PK
        INT requester_id FK
        INT addressee_id FK
        ENUM status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    direct_messages {
        INT id PK
        INT sender_id FK
        INT receiver_id FK
        VARCHAR body
        TINYINT is_read
        TIMESTAMP created_at
    }

    users ||--o{ refresh_tokens   : "1 usuari - N tokens"
    users ||--|| profiles         : "1 usuari - 1 perfil"
    themes ||--o{ profiles        : "1 tema - N perfils"
    users ||--o{ elo_history      : "1 usuari - N canvis ELO"
    games |o--o{ elo_history      : "1 partida - N canvis ELO"
    users ||--o{ games            : "juga com blanques"
    users ||--o{ games            : "juga com negres"
    games ||--o{ moves            : "1 partida - N moviments"
    users ||--o{ moves            : "fa moviments"
    users ||--o{ bot_games        : "1 usuari - N partides bot"
    bot_games ||--o{ bot_moves    : "1 partida - N moviments"
    users ||--o{ game_analysis    : "1 usuari - N analisis"
    games |o--o{ game_analysis    : "1 partida - N analisis"
    bot_games |o--o{ game_analysis: "1 partida bot - N analisis"
    users |o--o{ puzzles          : "crea puzzles"
    puzzles ||--o{ puzzle_attempts: "1 puzzle - N intents"
    users ||--o{ puzzle_attempts  : "1 usuari - N intents"
    users ||--o{ reports          : "fa denunciation"
    users ||--o{ reports          : "es denunciat"
    users |o--o{ reports          : "revisa"
    games |o--o{ reports          : "referida a"
    users ||--o{ friendships      : "envia sol.licitud"
    users ||--o{ friendships      : "rep sol.licitud"
    users ||--o{ direct_messages  : "envia DM"
    users ||--o{ direct_messages  : "rep DM"
